<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">localevents</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">search</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="events">Search Results..</string>
    <string name="chooscategory">Choose Category..</string>
    <string name="title_activity_event__datails">Event_Datails</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="choosecity">Choose City</string>
    <string name="SelectDate">Select Dates from to..</string>
    <string name="weekday_prompt">choose a category!</string>
    <string name="title_activity_searchbydatecity">Searchbydatecity</string>
    
    <string name="APP_ID">1383019005331052</string>
</resources>