<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView
     android:id="@+id/c"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="10dp"
     android:ellipsize="marquee"
     android:gravity="center"
     android:singleLine="true"
     android:textSize="18sp"
     android:text="@string/SelectDate" />
    

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="54dp"
     android:orientation="horizontal" >


 <EditText
        android:id="@+id/etxt_fromdate" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/from_date" />
 
    <EditText
        android:id="@+id/etxt_todate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/to_date" />
    
    </LinearLayout>
    

 <TextView
     android:id="@+id/ciame"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:ellipsize="marquee"
     android:gravity="center"
     android:singleLine="true"
     android:text="@string/choosecity" />
    
     <Spinner
        android:id="@+id/citySpine"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="#d5d4d3"
        android:gravity="center"       
        android:prompt="@string/weekday_prompt" >	
    </Spinner>
     <TextView
     android:id="@+id/categs"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:ellipsize="marquee"
     android:gravity="center"
     android:singleLine="true"
     android:layout_marginTop="10dp"
     android:text="@string/chooscategory" />
    
     <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="#d5d4d3"
        android:gravity="center"       
        android:prompt="@string/weekday_prompt" >	
    </Spinner>

     <Button
         android:id="@+id/SearchEvents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="90dp"
         android:text="SearchEvents" />
    
</LinearLayout>